<?xml version="1.0" encoding="utf-8"?>
<!--
מטרת הקובץ:
Bottom Navigation Menu
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:title="@string/nav_home"
        android:icon="@android:drawable/ic_menu_edit" /> <!-- Home -->

    <item
        android:id="@+id/myLooksFragment"
        android:title="@string/nav_my_looks"
        android:icon="@android:drawable/ic_menu_gallery" /> <!-- Explore/Looks -->

    <item
        android:id="@+id/createPlaceholder"
        android:title=""
        android:enabled="false"
        android:icon="@android:color/transparent" /> <!-- Placeholder for FAB -->

    <item
        android:id="@+id/favoritesFragment"
        android:title="@string/nav_favorites"
        android:icon="@android:drawable/btn_star_big_on" /> <!-- Favorites -->

    <item
        android:id="@+id/profileFragment"
        android:title="@string/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces" /> <!-- Profile -->

</menu>
